fix ivisible form elements

--- a/src/blocks/Header.css
+++ b/src/blocks/Header.css
@@ -32,6 +32,7 @@
   margin-top: 0px;
   margin-bottom: 0px;
   font-size: 20px;
+  display: flex;
 }
 
 .header__text-add {
